clang/test/BSC/Negative/Generic/InvalidTemplateParameters/do_not_crash4.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

;a<b[c>(
// expected-error@-1 {{unknown type name 'b'}}
// expected-error@-2 {{expected identifier}}
// expected-error@-3 {{expected ',' or '>' in template-parameter-list}}
// expected-error@-4 {{expected identifier or '('}}
